--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding
 
 #property_mls { width: 580px; }
 select.tall { width: 191px; }
-form .btn-submit { background: #FFCC1D; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
+form .btn-submit { background: #C7C7C7; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
 
 .how-steps { list-style: none; margin: 0; padding: 0; }
 .how-steps li { font-size: 18px; line-height: 130%; font-weight: 300; margin-bottom: 0.5em; }
