--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ p.copy { font-size: 13px; float: left; margin: 0.1em 2em 0 0; }
 /* Forms */
 form { margin: 0; background: #fafafa; border: 1px solid #e5e5e5; padding: 10px 10px 0; }
 label { display: block; margin-bottom: 4px; margin-top: 12px; color: #111; font-size: 12px; font-weight: bold; padding-left: 3px; font-family: 'Open Sans Condensed', sans-serif; text-transform: uppercase; font-weight: normal; font-size: 14px; color: #000; }
-input[type="text"], input[type="password"]  { width: 180px; margin-left: 0; margin-right: 0; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 10px; font-size: 13px; background: #fff; }
+input[type="text"], input[type="password"] { width: 180px; margin-left: 0; margin-right: 0; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 10px; font-size: 13px; background: #fff; }
 select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 9px; font-size: 13px; background: #fff; min-width: 110px; margin: 0 2px; }
 
 #account-setup a { color: #15C; }
@@ -139,7 +139,8 @@ select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding
 
 #property_mls { width: 580px; }
 select.tall { width: 191px; }
-form .btn-submit { background: #C7C7C7; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
+form .btn-submit { background: #FFCC1D; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
+.form-signup .btn-submit { background: #C7C7C7; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
 
 .how-steps { list-style: none; margin: 0; padding: 0; }
 .how-steps li { font-size: 18px; line-height: 130%; font-weight: 300; margin-bottom: 0.5em; }
