--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6156,3 +6156,4 @@ a.badge:focus {
 .affix {
   position: fixed;
 }
+.clear {clear: both;display: block;overflow: hidden;visibility: hidden;width: 0;height: 0}
