--- a/css/bootstrap-customize.css
+++ b/css/bootstrap-customize.css
@@ -74,6 +74,21 @@
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
 }
+.btn {
+	display: inline-block;
+	text-decoration: none;
+	border-radius: 3px;
+	height: 40px;
+	line-height: 40px;
+	margin: 0;
+	padding: 0 20px;
+	border: 1px solid #e0e0e0;
+	text-transform: uppercase;
+	text-align: center;
+	font-weight: 400;
+	border-radius: 2px;
+}
+
 .btn:hover,
 .btn:focus,
 .btn:active,
@@ -110,9 +125,11 @@
 .btn:active {
   background-image: none;
   outline: 0;
+  /*
   -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
   -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
   box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+  */
 }
 .btn.disabled,
 .btn[disabled] {
