--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ form { margin: 0; background: #fafafa; border: 1px solid #e5e5e5; padding: 10px 
 label { display: block; margin-bottom: 4px; margin-top: 12px; color: #111; font-size: 12px; font-weight: bold; padding-left: 3px; font-family: 'Open Sans Condensed', sans-serif; text-transform: uppercase; font-weight: normal; font-size: 14px; color: #000; }
 input[type="text"], input[type="password"] { width: 180px; margin-left: 0; margin-right: 0; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 10px; font-size: 13px; background: #fff; }
 select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 9px; font-size: 13px; background: #fff; min-width: 110px; margin: 0 2px; }
+input[type="radio"] { margin: 7px 5px; }
 
 #account-setup a { color: #15C; }
 #account-setup p { font-size: 14px; line-height: 17px; margin-top: 5px; }
@@ -141,6 +142,7 @@ select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding
 select.tall { width: 191px; }
 form .btn-submit { background: #FFCC1D; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
 .form-signup .btn-submit { background: #C7C7C7; color: #333; text-shadow: none; font-weight: normal; font-size: 16px; padding: 0 25px; width: auto; border-radius: 3px; margin: 0; }
+.form-signup .btn-group { margin: 15px 0 20px; }
 
 .how-steps { list-style: none; margin: 0; padding: 0; }
 .how-steps li { font-size: 18px; line-height: 130%; font-weight: 300; margin-bottom: 0.5em; }
