--- a/css/bootstrap__patch.css
+++ b/css/bootstrap__patch.css
@@ -35,7 +35,14 @@ li { line-height: 22px; }
 .link-more { text-decoration: none !important; color: #222; border-bottom: 1px solid #9CF; font-weight: 600; }
 
 label { display: block; margin-bottom: 4px; margin-top: 12px; color: #333; font-size: 12px; font-weight: bold; padding-left: 3px; font-family: 'Open Sans Condensed', sans-serif; text-transform: uppercase; font-weight: normal; font-size: 14px; color: #000; }
-textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input { width: 180px; margin-left: 0; margin-right: 0; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 10px; font-size: 13px; background: #fff; border-radius: 0; }
-select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 9px; font-size: 13px; background: #fff; min-width: 110px; margin: 0 2px; }
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input { width: 180px; margin: 0 0 0.5em; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 10px; font-size: 13px; background: #fff; border-radius: 0; }
+select, .form-horizontal select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 9px; font-size: 13px; background: #fff; width: 200px; margin: 0 0.5em 0.5em 0; border-radius: 0; height: 42px; }
 input[type="radio"] { margin: 7px 5px; }
 legend { font-weight: 600; color: #444; padding-left: 0.75em; }
+#property_mls { width: 580px; }
+
+.form-selector { margin: 0; padding: 0; }
+.form-selector li { display: inline-block; margin: 0 10px 0 0; }
+.form-selector li a { color: #444; display: block; padding: 7px 16px; border-radius: 3px; -moz-outline-radius: 5px; }
+.form-selector li.active a { background: #767676; color: #fff; font-weight: 400; box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.19); font-style: italic; }
+.navbar-inner { line-height: 2.4em; }
