--- a/css/bootstrap__patch.css
+++ b/css/bootstrap__patch.css
@@ -2,24 +2,25 @@ body { font: 16px/1.4em 'Source Sans Pro', Arial, Helvetica, Geneva, sans-serif;
 
 h1 { font: 34px/53px 'Source Sans Pro', Arial, Helvetica, Geneva, sans-serif; margin: 0 0 0.25em; font-weight: 400; line-height: 1.25em; color: #444; }
 	h1.admin-header { color: #555; margin: 0.5em 0 0; }
+	h1.pp-title { font-size: 20px; margin-bottom: 0.75em; }
 h2 { font-size: 25px; margin: 0.4em 0 1em; font-weight: 400; text-transform: uppercase; line-height: 1.25em; }
-h2.pp { margin: 0.75em 0 0.2em; font-size: 18px; font-weight: 700; color: #555; }
+h2.pp { margin: 0 0 0.5em; font-size: 16px; font-weight: 700; color: #555; text-transform: none; }
 h3 { font-weight: 600; text-transform: uppercase; font-size: 20px; margin: 0 0 1em; text-shadow: 0 1px 0 #fff; }
 
 li { line-height: 22px; }
+p { font-size: 15px; }
+header + .container { min-height: 600px; padding-bottom: 6em; }
 
 .navbar .brand { font-size: 25px; margin: 0 0 0.5em; padding: 0.5em 0 0; font-weight: 400; text-transform: uppercase; line-height: 1.25em; color: #222; }
-
 .btn {
 	display: inline-block;
 	text-decoration: none;
 	border-radius: 0;
-	height: 40px;
-	line-height: 40px;
+	height: 30px;
+	line-height: 30px;
 	margin: 0;
 	padding: 0 20px;
 	border: 1px solid #e0e0e0;
-	text-transform: uppercase;
 	text-align: center;
 	font-weight: 400;
 	border-radius: 2px;
@@ -36,14 +37,18 @@ li { line-height: 22px; }
 .link-more { text-decoration: none !important; color: #222; border-bottom: 1px solid #9CF; font-weight: 600; }
 
 label { display: block; margin-bottom: 4px; margin-top: 12px; color: #333; font-size: 12px; font-weight: bold; padding-left: 3px; font-family: 'Open Sans Condensed', sans-serif; text-transform: uppercase; font-weight: normal; font-size: 14px; color: #000; }
-textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input { width: 180px; margin-left: 0; margin-right: 0; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 10px; font-size: 13px; background: #fff; border-radius: 0; }
-select, .form-horizontal select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 9px; font-size: 13px; background: #fff; min-width: 110px; margin: 0 2px 7px; border-radius: 0; height: 40px; }
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input { width: 180px; margin-left: 0; margin-right: 0; border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 4px 10px; font-size: 13px; background: #fff; border-radius: 0; }
+select, .form-horizontal select { border: 1px solid #777; box-shadow: inset 1px 1px 2px 1px #CCC; padding: 4px 4px 4px 8px; font-size: 13px; background: #fff; min-width: 110px; margin: 0 2px 7px; border-radius: 0; height: 30px; width: 150px; }
 .navbar select { margin: 0; }
 .navbar .nav { margin: 8px 10px 0 0; }
 input[type="radio"] { margin: 7px 5px; }
-legend { font-weight: 600; color: #444; padding-left: 0.75em; }
-.media-object { width: 90px; }
+legend { font-weight: 500; color: #444; }
+.media-object { width: 120px; height: 90px; }
 .navbar-inner { line-height: 40px; border: 0; background: none; box-shadow: none; padding-left: 0; padding-right: 0; }
+.media { border: 1px solid #ccc; border-left: 7px solid #ccc; padding: 15px; color: #555; margin: 0.5em 0; border-radius: 0 3px 3px 0; }
+.media-heading a { color: #267786; font-size: 1.2em; }
+.media-heading span { display: block; font-size: 0.85em; font-weight: normal; color: #267786; margin: 0.15em 0 0; }
+.media-body .separator { display: inline-block; margin: 0 0.25em; opacity: 0.5; font-size: 0.9em; }
 
 header { background: url('../img/header_default_3.jpg') no-repeat; position: relative; box-shadow: 0 -3px 5px #555 inset; height: 82px; margin-bottom: 1.5em; }
 header h1.admin-header { color: #fff; margin-top: 0.6em; }
@@ -64,16 +69,24 @@ footer .menu { list-style: none; margin: 0; padding: 0; }
 footer .menu li a { color: #fff; text-decoration: none; font-size: 14px; line-height: 1.4em; display: inline-block; margin-bottom: 0.75em; }
 footer .menu li a:hover { color: #F6C20F; }
 footer .menu-container { font-size: 14px; } 
-footer .copyright { margin: 3.5em 0 0; padding: 1.5em 0; border-top: 1px solid #222; }
+footer .copyright { margin: 0.8em 0 0; padding: 1.5em 0; border-top: 1px solid #222; }
 p.copy { font-size: 13px; float: left; margin: 0.1em 2em 0 0; }
 .piped { display: block; zoom: 1; list-style: none outside; margin: 0; padding: 0; }
 .piped::after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 .piped li { float: left; display: inline; line-height: 1.4em; }
 .piped a { padding: 0 0 0 0.75em; margin-left: 0.75em; border-left: 1px solid #222; color: #ccc; font-size: 12px; line-height: 1em; text-decoration: none; }
 .piped a.first { border-left: 0 !important; padding-left: 0; margin-left: 0 !important; }
-.btn-link { color: #222; border-bottom: 1px solid #9CF; font-weight: 700 !important; border: 1px solid #c0c0c0 !important; }
+.btn-link { color: #222; border-bottom: 1px solid #9CF; font-weight: 700 !important; border: 1px solid #c0c0c0 !important; font-size: 0.9em; }
+button.btn-link { font-size: 0.8em; }
 
 html { position: relative; min-height: 100%; }
-body { margin: 0 0 430px; /* bottom = footer height */ }
-footer { position: absolute; left: 0; bottom: 0; height: 430px; width: 100%; }
+body { margin: 0 0 390px; /* bottom = footer height */ }
+footer { position: absolute; left: 0; bottom: 0; height: 390px; width: 100%; }
+
+/* Property details */
+.property-actions { margin: 1em 0; }
+form .span3 { margin-left: 0; }
+#div-search-property-result { margin: 1em 0 0; }
+form#search-properties { border: 1px solid #CCC; padding: 5px 20px; border-radius: 3px; box-shadow: 0 0 5px #CCC; }
+
 
