--- a/css/bootstrap__patch.css
+++ b/css/bootstrap__patch.css
@@ -86,6 +86,9 @@ p.copy { font-size: 13px; float: left; margin: 0.1em 2em 0 0; }
 .piped a.first { border-left: 0 !important; padding-left: 0; margin-left: 0 !important; }
 .btn-link { color: #222; border-bottom: 1px solid #9CF; font-weight: 700 !important; border: 1px solid #c0c0c0 !important; font-size: 0.9em; }
 button.btn-link { font-size: 0.8em; }
+.btn-exclude-property {
+	float: right;
+}
 
 html { position: relative; min-height: 100%; }
 body { margin: 0 0 390px; /* bottom = footer height */ }
